--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,5 +14,13 @@
     "rules": {
         "import/extensions": "off",
         "indent": ["error", 4]
-    }
+    },
+    "import/no-extraneous-dependencies": [
+        "error", {
+            "devDependencies":[
+                "**/*.test.ts",
+                "**/*.test.tsx"
+            ]
+        }
+    ]
 }
