--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "eslint": "^8.35.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.27.5",
-    "pug": "^3.0.2"
+    "pug": "^3.0.2",
+    "typescript": "^4.9.5"
   },
   "name": "2023_1_brigade",
   "description": "Репозиторий команды \"Brigade\". Весна, 2023",
