--- a/.github/workflows/build-n-deploy.yml
+++ b/.github/workflows/build-n-deploy.yml
@@ -27,10 +27,10 @@ jobs:
           npm run build
 
       - name: Copy dist folder to server
-        uses: easingthemes/ssh-deploy@v4.1.8
-        env:
-          SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
-          REMOTE_USER: ${{ secrets.USERNAME }}
-          REMOTE_HOST: ${{ secrets.HOST }}
-          SOURCE: dist/
-          TARGET: ${{ secrets.TARGET }}
+        uses: appleboy/scp-action@master
+        with:
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.USERNAME }}
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          source: "dist/**"
+          target: "${{ secrets.TARGET }}"
