Change CI rsync args

--- a/.github/workflows/build-n-deploy.yml
+++ b/.github/workflows/build-n-deploy.yml
@@ -38,4 +38,5 @@ jobs:
           REMOTE_HOST: ${{ secrets.HOST }}
           SOURCE: dist/
           TARGET: ${{ secrets.TARGET }}
+          ARGS: -rlDzvc -i
   
