--- a/.github/workflows/build-n-deploy.yml
+++ b/.github/workflows/build-n-deploy.yml
@@ -25,10 +25,6 @@ jobs:
       - name: Build
         run: |
           npm run build
-        
-      - name: Set extremely wide permissions
-        run: |
-          chmod -R 777 dist
 
       - name: Copy dist folder to server
         uses: easingthemes/ssh-deploy@v4.1.8
@@ -38,5 +34,5 @@ jobs:
           REMOTE_HOST: ${{ secrets.HOST }}
           SOURCE: dist/
           TARGET: ${{ secrets.TARGET }}
-          ARGS: -rlDzvc -i
+          ARGS: "-rlDzvc -i"
   
