--- a/.github/workflows/build-n-deploy.yml
+++ b/.github/workflows/build-n-deploy.yml
@@ -25,8 +25,12 @@ jobs:
       - name: Build
         run: |
           npm run build
-        
-      - name: Copy dist folder to server
-        run: |
-          ssh-keyscan -H ${{ secrets.HOST }} >> ~/.ssh/known_hosts
-          scp -i <(echo "${{ secrets.SSH_PRIVATE_KEY }}") -r dist ${{ secrets.USERNAME}}@${{ secrets.HOST }}:${{ secrets.TARGET }}
+
+      - name: Copy dist
+        uses: appleboy/scp-action@master
+        with:
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.USERNAME }}
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          source: dist
+          target: ${{ secrets.TARGET }}
