--- a/.github/workflows/build-n-deploy.yml
+++ b/.github/workflows/build-n-deploy.yml
@@ -5,7 +5,8 @@ on:
     branches:
       - main
       - dev
-  pull_request:
+  pull_request_review:
+    types: [submitted]
     branches:
       - main
       - dev
